prompts get loaded

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
                 </div>
             </div>
         </div>
+        <!-- Add this button somewhere appropriate in your HTML structure -->
+        <button id="fetchNotionData">Fetch Notion Data</button>
     </div>
     <script src="renderer.js"></script>
     <!-- Add Bootstrap JS and dependencies -->
